[flake8]
# The following errors codes are ignored:
#   * E111 - indentation is not a multiple of four
#   * E114 - indentation is not a multiple of four (comment)
#   * E121 - continuation line under-indented for hanging indent
#   * E126 - continuation line over-indented for hanging indent
#   * E127 - continuation line over-indented for visual indent
#   * E128 - continuation line under-indented for visual indent
#   * E131 - continuation line unaligned for hanging indent
ignore=E111,E114,E121,E126,E127,E128,E131
exclude=.eggs,.tox,env,pyvirtualenv
max-line-length=119

[metadata]
name = pyangbind
version = attr: pyangbind.__version__
description = PyangBind is a plugin for pyang which converts YANG data models into a Python class hierarchy, such that Python can be used to manipulate data that conforms with a YANG model.
long_description_content_type = text/x-rst
long_description = file: README.rst
license = Apache License, Version 2.0
author = Rob Shakir
author_email = rjs@rob.sh
url = https://github.com/robshakir/pyangbind
keywords = 
   yang
   pyang
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7
install_requires = file: requirements.txt
packages = find:
include_package_data = True
zip_safe=False
test_suite="tests.test_suite",
    
[options.packages.find]
include = 
    pyangbind
    pyangbind.helpers
    pyangbind.lib
    pyangbind.plugin
exclude = 
    tests